Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         <h1>
 <a id="welcome-to-seges-open-source-corner" class="anchor" href="#welcome-to-seges-open-source-corner" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Seges Open-Source corner</h1>
 
+<p><img src="images/logo.png" alt="seges logo"></p>
+
 <p>Here you find nice index of projects we are opening to the community.</p>
 
 <h2>
@@ -54,7 +56,8 @@
 <a id="infrastructure" class="anchor" href="#infrastructure" aria-hidden="true"><span class="octicon octicon-link"></span></a>Infrastructure</h2>
 
 <ul>
-<li><a href="https://github.com/seges/tomcat-control-center">Tomcat Control Center</a></li>
+<li>
+<a href="https://github.com/seges/tomcat-control-center">Tomcat Control Center</a> - Handy set of control scripts for Tomcat container(s) manageable from central place</li>
 </ul>
 
 <h2>
@@ -62,13 +65,17 @@
 
 <ul>
 <li>
-<a href="https://github.com/seges/chef-cookbook-grive">Grive</a> - Google Drive for Linux</li>
-<li><a href="https://github.com/seges/chef-cookbook-mass-backup">Mass Backup</a></li>
-<li><a href="https://github.com/seges/chef-cookbook-openmq">OpenMQ</a></li>
+<a href="https://github.com/seges/chef-cookbook-grive">Grive</a> - Google Drive for Linux Cookbook</li>
 <li>
-<a href="https://github.com/seges/chef-cookbook-pencil">Pencil</a> - Pencil Wireframing tool</li>
-<li><a href="https://github.com/seges/chef-cookbook-proxydriver">Proxy Driver</a></li>
-<li><a href="https://github.com/seges/chef-cookbook-tcc">Tomcat Control Center</a></li>
+<a href="https://github.com/seges/chef-cookbook-mass-backup">Mass Backup</a> - A set of scripts to backup directories using Tartarus</li>
+<li>
+<a href="https://github.com/seges/chef-cookbook-openmq">OpenMQ</a> - OpenMQ message broker server cookbook</li>
+<li>
+<a href="https://github.com/seges/chef-cookbook-pencil">Pencil</a> - Pencil Wireframing tool Cookbook</li>
+<li>
+<a href="https://github.com/seges/chef-cookbook-proxydriver">Proxy Driver</a> - Proxy driver for your Linux workstation Cookbook</li>
+<li>
+<a href="https://github.com/seges/chef-cookbook-tcc">Tomcat Control Center</a> - Cookbook installing and setting up TCC</li>
 </ul>
       </section>
     </div>
