Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h1>
 <a id="welcome-to-seges-open-source-corner" class="anchor" href="#welcome-to-seges-open-source-corner" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Seges Open-Source corner</h1>
 
-<p><img src="images/logo.png" alt="seges logo"></p>
+<p><a href="http://seges.com"><img src="images/logo.png" alt="seges logo"></a></p>
 
 <p>Here you find nice index of projects we are opening to the community.</p>
 
@@ -50,6 +50,16 @@
 <a href="http://seges.github.io/cutlery">cutlery</a> - Discovery, proxying and basid Docker environment for your development machine or production environment</li>
 <li>
 <a href="https://github.com/seges/docker-openmq">openmq</a> - Docker image of OpenMQ message broker server</li>
+</ul>
+
+<h2>
+<a id="java" class="anchor" href="#java" aria-hidden="true"><span class="octicon octicon-link"></span></a>Java</h2>
+
+<ul>
+<li>
+<a href="http://acris.googlecode.com">AcrIS</a> - AcrIS is a modern framework serving as a base for applications, web sites and portals.</li>
+<li>
+<a href="https://code.google.com/p/gwt-youtube-api">GWT YouTube API</a> - Allows you to use Youtube API in your GWT application so in a nutshell project helps you use YouTube's video content and functionality in your application build on Google Web Toolkit.</li>
 </ul>
 
 <h2>
